--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="./images/favicon.ico" />
+    <link rel="stylesheet" href="normalize.css" />
     <title>創作</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <h1>創作</h1>
+    </header>
+  </body>
 </html>
