--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
   <body>
     <header id="header">
       <h1>創作</h1>
+      <nav id="navigation">
+        <ul>
+          <li>お知らせ</li>
+          <li>商品のご案内</li>
+          <li>店舗のご案内</li>
+        </ul>
+      </nav>
+      <div class="online">
+        <a href="#" target="_blank">オンラインストアを見る</a>
+      </div>
     </header>
+    <main>
+      <section>
+        <h2>
+          <span>News</span>
+          <span>お知らせ</span>
+        </h2>
+      </section>
+    </main>
   </body>
 </html>
