--- a/index.html
+++ b/index.html
@@ -34,6 +34,36 @@
           <span>News</span>
           <span>お知らせ</span>
         </h2>
+        <dl>
+          <dt>2021.01.01</dt>
+          <dd>タイトルタイトルタイトルタイトル</dd>
+          <dt>2021.01.01</dt>
+          <dd>タイトルタイトルタイトルタイトル</dd>
+          <dt>2021.01.01</dt>
+          <dd>タイトルタイトルタイトルタイトル</dd>
+          <dt>2021.01.01</dt>
+          <dd>タイトルタイトルタイトルタイトル</dd>
+          <dt>2021.01.01</dt>
+          <dd>タイトルタイトルタイトルタイトル</dd>
+        </dl>
+      </section>
+      <section>
+        <h2>
+          <span>新しい価値の創造</span>
+          <span>Create New Values</span>
+          <div>
+            <img src="./images/create.jpeg" alt />
+            <p>
+              テキストテキスト
+              <br />
+              テキストテキスト
+            </p>
+          </div>
+        </h2>
+      </section>
+      <section>
+        <span>科学と技術の調和</span>
+        <span>Science & Technology</span>
       </section>
     </main>
   </body>
