--- a/index.html
+++ b/index.html
@@ -62,9 +62,53 @@
         </h2>
       </section>
       <section>
-        <span>科学と技術の調和</span>
-        <span>Science & Technology</span>
+        <h2>
+          <span>科学と技術の調和</span>
+          <span>Science & Technology</span>
+        </h2>
       </section>
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1792.1270061697599!2d139.73405579786504!3d35.66405837535625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b9c2ef8e6c3%3A0xff8de5eeddcd1e17!2z44CSMTA2LTAwMzIg5p2x5Lqs6YO95riv5Yy65YWt5pys5pyo77yV5LiB55uu!5e0!3m2!1sja!2sjp!4v1638067335203!5m2!1sja!2sjp"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
     </main>
+    <footer>
+      <div>
+        <div>
+          <p>
+            <a href="#" target="_brank">オンラインんストアを見る</a>
+            ｜
+            <a href="mailto:xxxxx@xxx.xxx.com">お問い合わせ</a>
+          </p>
+        </div>
+        <div>
+          <h2>創作</h2>
+          <p>
+            〒106-0032 東京都港区六本木５丁目xxxxx
+            <br />
+            電話：
+            <a href="tel:03-xxxx-xxxx">03-xxxx-xxxx</a>
+          </p>
+          <ul>
+            <li>
+              <a href="">お知らせ</a>
+            </li>
+            <li>
+              <a href="">商品のご紹介</a>
+            </li>
+            <li>
+              <a href="">店舗のご案内</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <p>&copy; SOUSAKU</p>
+    </footer>
   </body>
 </html>
