--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       </div>
     </header>
     <main>
-      <section>
+      <section id="news">
         <h2>
-          <span>News</span>
-          <span>お知らせ</span>
+          <span class="ne">News</span>
+          <br />
+          <span class="notification">お知らせ</span>
         </h2>
-        <dl>
+        <dl class="title">
           <dt>2021.01.01</dt>
           <dd>タイトルタイトルタイトルタイトル</dd>
           <dt>2021.01.01</dt>
@@ -47,25 +48,33 @@
           <dd>タイトルタイトルタイトルタイトル</dd>
         </dl>
       </section>
-      <section>
+      <section id="section1">
         <h2>
-          <span>新しい価値の創造</span>
-          <span>Create New Values</span>
-          <div>
-            <img src="./images/create.jpeg" alt />
-            <p>
-              テキストテキスト
-              <br />
-              テキストテキスト
-            </p>
-          </div>
+          <span class="section1-title">新しい価値の創造</span>
+          <span class="section1-subtitle">Create New Values</span>
         </h2>
+        <div class="create">
+          <img src="./images/create.jpeg" alt />
+          <p class="text">
+            テキストテキスト
+            <br />
+            テキストテキスト
+          </p>
+        </div>
       </section>
-      <section>
+      <section id="section2">
         <h2>
           <span>科学と技術の調和</span>
           <span>Science & Technology</span>
         </h2>
+        <div class="science">
+          <img src="./images/science.jpg" alt />
+          <p class="text">
+            テキストテキスト
+            <br />
+            テキストテキスト
+          </p>
+        </div>
       </section>
       <div>
         <iframe
